@@ -13,6 +13,8 @@ perl:
   - "5.18"
   - "5.20"
   - "5.22"
+  - "5.24"
+  - "5.26"
 
 script:
   - dzil test -v
