@@ -13,16 +13,17 @@ travis_status = 1
 diag          = +Clustericious
 diag          = +Mojolicious
 github_user   = clustericious
+test2_v0      = 1
 
 [RemovePrereqs]
 remove = strict
 remove = warnings
 remove = base
 remove = File::Spec
+remove = File::Glob
 
 remove = Authen::Simple::Adapter
 remove = Role::Tiny::With
-remove = File::HomeDir::Test
 
 remove = PlugAuth::Role::Auth
 remove = PlugAuth::Role::Plugin
