@@ -1,10 +1,0 @@
-Authen::Simple
-Clustericious
-ExtUtils::MakeMaker
-File::HomeDir
-Mojolicious
-Params::Validate
-PlugAuth
-Role::Tiny
-Test::More
-YAML::XS
