@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove dependency on File::HomeDir
 
 0.02      2015-11-29 15:13:26 -0500
   - Improved diagnostics with test
